--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.12",
     "@types/node": "^22.13.10",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.2.1",
     "postcss": "^8.4.49",
     "prisma": "^6.4.1",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.0.12",
     "typescript": "^5.6.3"
   },
   "overrides": {
